<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.showDish">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F0F0"
        android:backgroundTint="#F6F0F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mImage"
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="0dp">

                <TextView
                    android:id="@+id/mDish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/almendra_sc"
                    android:text="@string/title"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/almendra_sc"
                    android:text="@string/type"
                    android:layout_marginTop="8dp"
                    android:textColor="#4A6572"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mServes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/almendra_sc"
                    android:text="@string/serves"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#4A6572"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mDifficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/almendra_sc"
                    android:text="@string/difficulty"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/amita"
                    android:text="@string/ingredients"
                    android:textAlignment="viewStart"
                    android:textAllCaps="true"
                    android:textColor="#4A6572"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#FFFCFC"
                    app:cardElevation="3dp">

                    <TextView
                        android:id="@+id/mIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/amita"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/amita"
                    android:text="@string/preparation"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#FFFCFC"
                    app:cardElevation="3dp">

                    <TextView
                        android:id="@+id/mPreparation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/amita"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>