<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/dishCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FFFCFC"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/dishImage"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="0dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/dishTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/almendra_sc"
                    android:text="My Recipes"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="#344955"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dishServes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/almendra_sc"
                    android:text="Serves : 5"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#4A6572"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dishDifficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/almendra_sc"
                    android:text="Difficulty : Hard"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#4A6572" />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/deleteDishBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/amita"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_baseline_delete_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editDishBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amita"
                    android:text="@string/edit"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_baseline_edit_24" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>